--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
+# Dependencies
 node_modules
-.env. *
+
+# Environment files
 .env
+.env.*
+.env.local
+.env.development
+.env.production
+
 # Neon Local metadata
 .neon_local/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# Docker
+.dockerignore
