--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/acquasitions-app
+  IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/acquasitions-app:latest
 
 jobs:
   build-and-push:
