--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/acquasitions-app:latest
+  IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/acquasitions-app
 
 jobs:
   build-and-push:
@@ -56,7 +56,7 @@ jobs:
           labels: |
             org.opencontainers.image.title=Acquisitions API
             org.opencontainers.image.description=Node.js Express API for acquisitions system
-            org.opencontainers.image.vendor=Adrian Hajdin
+            org.opencontainers.image.vendor=Ibrahim Bišić
             org.opencontainers.image.created={{date 'YYYY-MM-DDTHH:mm:ssZ'}}
 
       - name: Build and push Docker image
